--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-scripts": "3.3.0",
     "reactjs-popup": "^1.5.0",
     "styled-components": "^4.4.1",
-    "yup": "^0.28.0"
+    "yup": "^0.28.0",
+    "acorn": "^7.1.1",
+    "minimist": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
